examples/passing/NamedPatterns.purs
foo = \x -> case x of 
  y@{ foo = "Foo" } -> y
  y -> y
